--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "telegraf": "^4.3.0"
+    "telegraf": "^4.3.0",
+    "telegraf-stateless-question": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
