--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "telegraf": "^4.3.0",
-    "telegraf-stateless-question": "^2.0.1"
+    "ioredis": "^4.27.5",
+    "telegraf": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
